<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/SCREEN">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/ic_baseline_person_24_black"
            android:gravity="center"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView

                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                style="@style/TEXT"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/SCREEN"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:layout_marginBottom="5dp"
            android:text="Customer Information"
            android:textColor="@color/white"
            android:padding="5dp"
            android:backgroundTint="@color/red"
            android:background="@drawable/searchbar_background"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:maxLines="1"
            android:background="@drawable/searchbar_background"
            android:drawableLeft="@drawable/user_black"
            android:drawablePadding="13dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="Nhập tên của bạn"
            android:paddingHorizontal="10dp"
            android:textColorHint="#808080"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:maxLines="1"
            android:background="@drawable/searchbar_background"
            android:drawableLeft="@drawable/baseline_contact_phone_24"
            android:drawablePadding="13dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="Nhập số điện thoại"
            android:paddingHorizontal="10dp"
            android:textColorHint="#808080"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:layout_marginVertical="5dp"
            android:background="@drawable/searchbar_background"
            android:drawableLeft="@drawable/baseline_add_location_24"
            android:drawablePadding="13dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="Nhập địa chỉ giao hàng"
            android:paddingHorizontal="10dp"
            android:textColorHint="#808080"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient_button"
            android:text="Update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/info"
            />
            
    </LinearLayout>

    <Button
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient_button"
        android:onClick="logout"
        android:text="Log Out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>