...
                android:padding="3dp"
                android:text="Thích"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnBinhLuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/gradient_button"
                android:drawableTop="@drawable/baseline_comment_24_white"
...
